--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@nuxt/content": "3.4.0",
     "@nuxt/eslint": "1.3.0",
     "@nuxt/fonts": "0.11.0",
@@ -24,9 +25,15 @@
     "@unhead/vue": "^2.0.0-rc.8",
     "@vee-validate/zod": "^4.15.0",
     "@vueuse/core": "^13.0.0",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "debounce": "^2.2.0",
     "eslint": "^9.0.0",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lucide-vue-next": "^0.487.0",
     "nuxt": "^3.16.1",
     "pinia": "^3.0.1",
